apps/infra/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssv-backoffice-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ssv-backoffice-webapp
  template:
    metadata:
      labels:
        app: ssv-backoffice-webapp
    spec:
      containers:
      - name: ssv-backoffice-webapp-container
        image: asd/use1-0-ssv-backoffice-webapp:m2
        ports:
        - containerPort: 3000
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: ssv-backoffice-webapp-service
spec:
  selector:
    app: ssv-backoffice-webapp
  ports:
    - protocol: TCP
      port: 3000
  type: ClusterIP
